--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,9 +4,15 @@ body {
   color: #fff;
 }
 
-.wrapper {
+.container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+}
+
+.wrapper {
   width: 70%;
 }
 
