--- a/src/components/SignUp/SignUpForm.css
+++ b/src/components/SignUp/SignUpForm.css
@@ -34,14 +34,14 @@ form input {
 form p {
   color: #e74c3c;
   font-size: 14px;
-  margin-top: -10px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
 form button {
   width: 100%;
   padding: 10px;
-  background-color: #88ab33;
+  background-color: green;
   color: white;
   border: none;
   border-radius: 4px;
