Login Token code added with error

--- a/src/components/AddTask/AddTask.module.css
+++ b/src/components/AddTask/AddTask.module.css
@@ -33,7 +33,7 @@
   margin-left: 20px;
 }
 
-.visually-hidden {
+.visually_hidden {
   position: absolute !important;
   clip: rect(1px, 1px, 1px, 1px);
   padding: 0 !important;
