--- a/src/components/LogIn/LoginForm.module.css
+++ b/src/components/LogIn/LoginForm.module.css
@@ -34,7 +34,7 @@ form input {
 form p {
   color: #e74c3c;
   font-size: 14px;
-  margin-top: 20px;
+  margin-top: -10px;
   margin-bottom: 10px;
 }
 
@@ -50,12 +50,9 @@ form button {
   transition: background-color 0.3s;
 }
 
-/* form button:disabled {
-  background-color: #aaa;
-  cursor: not-allowed;
-} */
-
-/* Hover effect for the button */
 form button:hover {
   background-color: #2980b9; /* Darker blue on hover */
+}
+.signupLink {
+  margin-top: 10px;
 }
