--- a/src/components/LogIn/LoginForm.module.css
+++ b/src/components/LogIn/LoginForm.module.css
@@ -51,7 +51,7 @@ form button {
 }
 
 form button:hover {
-  background-color: #2980b9; /* Darker blue on hover */
+  background-color: #2980b9;
 }
 .signupLink {
   margin-top: 10px;
