--- a/src/components/SignUp/SignUpForm.module.css
+++ b/src/components/SignUp/SignUpForm.module.css
@@ -3,8 +3,7 @@
 }
 
 .signupForm {
-  margin: 0 auto;
-  margin-top: 80px;
+  width: 100%;
   max-width: 400px;
   padding: 20px;
   background-color: black;
@@ -55,4 +54,5 @@
 
 .signupLink {
   margin-top: 10px;
+  color: red;
 }
